--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: akhagan@umich.edu
 description: > # this means to ignore newlines until "baseurl:"
    The website for Ada K. Hagan's mission to make science accessible.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://akhagan.github.io" # the base hostname & protocol for your site
+url: "http://akhagan.com" # the base hostname & protocol for your site
 twitter_username: adahagan
 github_username:  akhagan 
 array: []
